
	* Modified file_type function to record the file size of 
	  each file processed. This should eliminate the need to
	  call stat again or the ioctl functions in hash.c and
	  hopefully speed up the program.

	* Added timestamp to the output for size mode per Feature
	  Request 2014686. This should be the creation time on 
	  Win32, change time for all other operating systems.


2008-07-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added -I mode to display filenames with asterisks for
	  hashes when size is above threshold. Compliments -i mode.
	

2008-07-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Removed SF Community Choice Awards from web page. 
	  The nominations are closed.

	* Added size mode, -i, to only process files smaller than
	  a given size threshold. Reused code from piecewise mode
	  to parse user input. Added to md5deep and hashdeep.
	  Added to SF at Feature Request 2010771.

	
2008-05-17 Jesse Kornblum <md5deep@jessekornblum.com>

	* Applied patch 1961973 to fix man page installation.
	

2008-04-18 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated files.c et al to handle iLook version 4 hashes.
	  These are similar enough that we can reuse most of the 
	  iLook v3 routines.

	
2008-04-17 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated initial kludge to use iLook version 3 hashsets.

	* The current version crashed on OpenSolaris during a malloc
	  in main.c. This is confusing as I wasn't working on this code.
	

2008-04-16 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated md5deep to use iLook version 3 hashes.
	

2008-03-29 Jesse Kornblum <md5deep@jessekornblum.com>

	* Changed WSTRINGS_EQUAL macro to make case sensitive comparisons
	  Changed case insensitive char comparsion macro to 
	  STRINGS_CASE_EQUAL.

	* Fixed audit mode to return nonzero value for failed audit

	* Fixed hashdeep known file import to only display errors once
	

2008-03-28 Jesse Kornblum <md5deep@jessekornblum.com>
