@@ -164,7 +164,6 @@ static int process_command_line(state *s, int argc, char **argv)
     case 'q': 
       s->mode |= mode_quiet; 
       break;
-      // RBF - Add to man page
     case 't':
       s->mode |= mode_timestamp;
       MD5DEEP_ALLOC(char,s->time_str,MAX_TIME_STRING_LENGTH);
